@@ -207,6 +207,6 @@ Grammar.extend
            (d : 'sig_item_def_undef))]]]);;
 
 Pcaml.add_option "-D" (Arg.String define)
-  "<string>   Define for ifdef instruction.";;
+  "<string> Define for ifdef instruction.";;
 Pcaml.add_option "-U" (Arg.String undef)
-  "<string>   Undefine for ifdef instruction.";;
+  "<string> Undefine for ifdef instruction.";;
